# vexdoc

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  VexDoc.toml
.github/workflows/: ci.yml  release.yml  test_build.yml
benches/: file_processing.rs
examples/: README.md
examples/test_files/: VexDoc.toml  VexDoc_python.toml  calculator.rs  data_processor.py  math_utils.rs  sample.py  sample.rs  test.sh  view_docs.sh
src/: cli.rs  docgen.rs  errors.rs  lib.rs  main.rs
src/docgen/: mod.rs  styles.css  tests.rs
tests/: integration_tests.rs
